_docs/kustomize/nginx-gateway-fabric/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: akash-gateway
  labels:
    akash.network: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: akash-gateway
  namespace: akash-gateway
  labels:
    akash.network: "true"
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
